tests/match-10/out.txt
error: unreachable pattern
  ┌─ err.sml:7:5
  │
7 │   | [7, 7] => 5
  │     ^^^^^^

typechecking failed
